<resources>
    <string name="app_name">MyDays</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="banner_ad_unit_id">ca-app-pub-3136625326865731/3599680889</string>
    <string name="color_main_title">#50deb5</string>
    <string name="my_channel_id">MyDaysChannel</string>
    <string name="default_notification_channel_id">noti_channel</string>
    <string name="noti_title_check_sleep_time">수면시간 등록</string>
    <string name="title_event">시간별 일정</string>
    <string name="text_submit">확인</string>
    <string name="text_cancel">취소</string>
    <string name="title_input_event">이벤트 입력</string>
    <string name="message_input_event">이벤트의 내용을 입력하세요.</string>
    <string name="text_category_name">카테고리 명: </string>
    <string name="message_dialog_empty_category">카테고리 명과 색상을 입력해주세요.</string>
    <string name="message_category_added">새로운 카테고리가 등록되었습니다.</string>
    <string name="title_cardview_plan_time">계획 시간</string>
    <string name="title_dialog_category_remove">카테고리 삭제</string>
    <string name="message_dialog_category_remove">해당 카테고리를 삭제하시겠습니까?\n해당 카테고리와 연관된 이벤트도 모두 삭제됩니다.</string>
    <string name="message_category_removed">카테고리가 삭제되었습니다.</string>
    <string name="text_register">일정 등록</string>
    <string name="text_detail">일정 상세</string>
    <string name="text_title_daily_graph">계획 시간</string>
    <string name="text_title_challenge">달성률</string>
    <string name="text_title_classification_graph">카테고리별 분류</string>
    <string name="text_title_map">방문 장소</string>
    <string name="toast_finish_app">\'뒤로\' 버튼을 한번 더 누르면 종료됩니다.</string>
    <string name="toast_update_required">업데이트 예정입니다.</string>
    <string name="developer_email_address">leein3293@gmail.com</string>
    <string name="mydays_report">[MyDay Report]</string>
    <string-array name="category_dialog_options">
        <item>수정</item>
        <item>삭제</item>
    </string-array>

    <string name="category_1">#ff0000</string>
    <string name="category_2">#9370db</string>
    <string name="category_3">#00bfff</string>
    <string name="category_4">#32cd32</string>
    <string name="category_5">#6495ed</string>
    <string name="category_6">#f0e68c</string>
    <string name="category_7">#00ffff</string>
    <string name="category_8">#ee82ee</string>
    <string name="category_9">#ffff00</string>
    <string name="category_10">#ff7f50</string>
    <string name="category_11">#4169e1</string>
    <string name="category_12">#d3d3d3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
