<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="model"
            type="com.msproject.myhome.mydays.main.fragment.PlannerViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/whole_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".main.MainActivity">
        <androidx.cardview.widget.CardView
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/frame_card_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar_container"
            app:layout_constraintBottom_toTopOf="@id/select_view">
        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/select_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/frame_card_view"
            app:layout_constraintBottom_toTopOf="@id/adView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="12dp"
            android:background="@drawable/round_edge">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/text_register"
                    android:onClick="@{() -> model.setMode(true)}"
                    android:textColor="@{model._isPlanner ? @color/colorWhite : @color/colorBlack}"
                    android:background="@{model._isPlanner ? @color/colorAccent : @color/colorWhite}"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/text_detail"
                    android:onClick="@{() -> model.setMode(false)}"
                    android:textColor="@{model._isPlanner ? @color/colorBlack : @color/colorWhite}"
                    android:background="@{model._isPlanner ? @color/colorWhite : @color/colorAccent}"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:layout_constraintBottom_toBottomOf="parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>